# cmake-example

./: build_script.sh
A/: A.cc  AConfig.cmake.in  CMakeLists.txt
B/: B.cc  BConfig.cmake.in  CMakeLists.txt  main.cc
C/: C.cc  CConfig.cmake.in  CMakeLists.txt  main.cc
